<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addTaskLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    android:layout_marginTop="50dp"
    tools:context=".AddTaskFragment">

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="300dp"
        android:layout_height="420dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="Description"
        android:hint="@string/Description"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleInput" />

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:autofillHints="Title"
        android:hint="@string/Title"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label" />

    <TextView
        android:id="@+id/label"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/enter_list_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/image_button"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titleInput"
        app:layout_constraintTop_toBottomOf="@+id/label" />

</androidx.constraintlayout.widget.ConstraintLayout>