<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addTaskLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    android:layout_marginTop="50dp"
    tools:context=".AddTaskFragment">

    <TextView
        android:id="@+id/importanceLabel"
        android:layout_width="112dp"
        android:layout_height="19dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="120dp"
        android:text="@string/task_importance"
        app:layout_constraintBottom_toTopOf="@+id/importanceGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInput">

    </TextView>

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="300dp"
        android:layout_height="420dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="Description"
        android:hint="@string/Description"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleInput" />

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:autofillHints="Title"
        android:hint="@string/Title"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label" />

    <RadioGroup
        android:id="@+id/importanceGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:checkedButton="@+id/normal_radioButton"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <RadioButton
            android:id="@+id/low_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/normal_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/high_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </RadioGroup>

    <TextView
        android:id="@+id/label"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/enter_task_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/image_button"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titleInput"
        app:layout_constraintTop_toBottomOf="@+id/label" />

</androidx.constraintlayout.widget.ConstraintLayout>